A few changes Now the contact info is displayed correctly on small devices the navbar fade effect got removed and is now on top a few more changes

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,5 +1,6 @@
 .about {
   padding: 50px;
+  padding-top: 70px;
   border-radius: 8px;
   text-align: left;
 }
