--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,5 +1,5 @@
 .contact {
-
+  padding-top: 70px;
   padding: 50px;
   border-radius: 8px;
   text-align: left;
