--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   position: fixed;
-  bottom: 20px;
+  top: 1%;
   left: 50%;
   transform: translateX(-50%);
   background-color: #333;
@@ -13,7 +13,7 @@
   white-space: nowrap;
   max-width: 100%;
   box-sizing: border-box;
-  opacity: 0.4; /* Reduced opacity for the fade effect */
+  opacity: 1; /* Reduced opacity for the fade effect */
   transition: opacity 0.3s ease;
 }
 
