--- a/src/styles/Order.css
+++ b/src/styles/Order.css
@@ -1,5 +1,5 @@
 .order {
-
+    padding-top: 70px;
     padding: 50px;
     border-radius: 8px;
     text-align: left;
