--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,5 +1,6 @@
 .projects {
   padding: 50px;
+  padding-top: 70px;
   border-radius: 8px;
   text-align: left;
 }
